--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: true
+  data:
+    mongodb:
+      uri: mongodb+srv://root:root@mahesh.yrlhkv3.mongodb.net/
+      database: ncart
 
 management:
   endpoint:
